fix root horizontal scroll (size overflow)

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 a{color: inherit;}
+:root{
+    max-width: 100%;
+    overflow-x: hidden;
+}
 body{
 /* background-color: #191919; */
 /* width: 110%; */
